--- a/plik1.ipynb
+++ b/plik1.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('C:\\Kodilla\\learning-git-12\\police.csv')\n"
+    "df=pd.read_csv('police.csv')\n"
    ]
   },
   {
